minor tweak